--- a/templates/post-detail.html
+++ b/templates/post-detail.html
@@ -7,4 +7,5 @@
         <p>{{ post.body }}</p>
         <p>{{ post.created_at }}</p>
         <p>{{ post.updated_at }}</p>
+        <a href="{% url 'post-update' post.pk %}">Editar</a>
 {% endblock %}
