--- a/templates/post-detail.html
+++ b/templates/post-detail.html
@@ -8,4 +8,5 @@
         <p>{{ post.created_at }}</p>
         <p>{{ post.updated_at }}</p>
         <a href="{% url 'post-update' post.pk %}">Editar</a>
+        <a href="{% url 'post-delete' post.pk %}">Eliminar</a>
 {% endblock %}
