--- a/templates/_base.html
+++ b/templates/_base.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <a href="{% url 'post-list'  %}"><h1>Blog del pepe</h1></a>
-    <a href="{% url 'post_new' %}">Nueva publicación</a>
+    <a href="{% url 'post_new' %}">Nueva publicación</a>|
+    <a href="{% url 'login' %}">Iniciar sesión</a>
     {% block content %}
     {% endblock %}
 </body>
