--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -5,6 +5,6 @@
     <form action="" method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="Log in">  
+        <input class="btn btn-danger" type="submit" value="Log in">  
     </form>
 {% endblock %}
