--- a/templates/post-detail.html
+++ b/templates/post-detail.html
@@ -7,6 +7,9 @@
         <p>{{ post.body }}</p>
         <p>{{ post.created_at }}</p>
         <p>{{ post.updated_at }}</p>
-        <a href="{% url 'post-update' post.pk %}">Editar</a>
-        <a href="{% url 'post-delete' post.pk %}">Eliminar</a>
+        <!-- Mostrar botones de editar y eliminar solo si el usuario autenticado es el autor del post -->
+        {% if post.author.pk == request.user.pk %}
+            <a href="{% url 'post-update' post.pk %}">Editar</a>
+            <a href="{% url 'post-delete' post.pk %}">Eliminar</a>
+        {% endif %}
 {% endblock %}
